fix issues with helix participant and job engine starter