@@ -23,22 +23,22 @@ import org.apache.airavata.common.exception.ApplicationSettingsException;
 import org.apache.airavata.common.utils.ServerSettings;
 import org.apache.airavata.helix.core.support.TaskHelperImpl;
 import org.apache.airavata.helix.core.AbstractTask;
-import org.apache.airavata.helix.core.util.PropertyResolver;
 import org.apache.airavata.helix.task.api.annotation.TaskDef;
 import org.apache.helix.InstanceType;
 import org.apache.helix.examples.OnlineOfflineStateModelFactory;
-import org.apache.helix.manager.zk.ZKHelixAdmin;
-import org.apache.helix.manager.zk.ZKHelixManager;
-import org.apache.helix.manager.zk.ZNRecordSerializer;
-import org.apache.helix.manager.zk.ZkClient;
 import org.apache.helix.model.BuiltInStateModelDefinitions;
 import org.apache.helix.model.InstanceConfig;
 import org.apache.helix.participant.StateMachineEngine;
 import org.apache.helix.task.TaskFactory;
 import org.apache.helix.task.TaskStateModelFactory;
+import org.apache.helix.zookeeper.datamodel.serializer.ZNRecordSerializer;
+import org.apache.helix.zookeeper.impl.client.ZkClient;
+import org.apache.helix.manager.zk.ZKHelixAdmin;
+import org.apache.helix.manager.zk.ZKHelixManager;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 
 /**
@@ -54,15 +54,16 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
     private int shutdownGracePeriod = 30000;
     private int shutdownGraceRetries = 2;
 
-    private String zkAddress;
-    private String clusterName;
-    private String participantName;
+    private final String zkAddress;
+    private final String clusterName;
+    private final String participantName;
+    private final String taskTypeName;
+
     private ZKHelixManager zkHelixManager;
 
-    private String taskTypeName;
 
-    private List<Class<? extends T>> taskClasses;
-    private final List<String> runningTasks = Collections.synchronizedList(new ArrayList<String>());
+    private final List<Class<? extends T>> taskClasses;
+    private final List<String> runningTasks = Collections.synchronizedList(new ArrayList<>());
 
     public HelixParticipant(List<Class<? extends T>> taskClasses, String taskTypeName) throws ApplicationSettingsException {
 
@@ -75,38 +76,41 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
         this.taskTypeName = taskTypeName;
         this.taskClasses = taskClasses;
 
-        logger.info("Zookeeper connection URL " + zkAddress);
-        logger.info("Cluster name " + clusterName);
-        logger.info("Participant name " + participantName);
-        logger.info("Task type " + taskTypeName);
+        logger.info("Zookeeper connection URL {}", zkAddress);
+        logger.info("Cluster name {}", clusterName);
+        logger.info("Participant name {}", participantName);
+        logger.info("Task type {}", taskTypeName);
 
         if (taskClasses != null) {
             for (Class<? extends T> taskClass : taskClasses) {
-                logger.info("Task classes include: " + taskClass.getCanonicalName());
+                logger.info("Task classes include: {}", taskClass.getCanonicalName());
             }
         }
     }
 
+    @SuppressWarnings({"WeakerAccess", "unused"})
     public HelixParticipant(Class<T> taskClass, String taskTypeName) throws ApplicationSettingsException {
         this(taskClass != null ? Collections.singletonList(taskClass) : null, taskTypeName);
     }
 
+    @SuppressWarnings({"WeakerAccess", "unused"})
     public void setShutdownGracePeriod(int shutdownGracePeriod) {
         this.shutdownGracePeriod = shutdownGracePeriod;
     }
 
+    @SuppressWarnings({"WeakerAccess", "unused"})
     public void setShutdownGraceRetries(int shutdownGraceRetries) {
         this.shutdownGraceRetries = shutdownGraceRetries;
     }
 
     public void registerRunningTask(AbstractTask task) {
         runningTasks.add(task.getTaskId());
-        logger.info("Registered Task " + task.getTaskId() + ". Currently available " + runningTasks.size());
+        logger.info("Registered Task {}. Currently available {}", task.getTaskId(), runningTasks.size());
     }
 
     public void unregisterRunningTask(AbstractTask task) {
         runningTasks.remove(task.getTaskId());
-        logger.info("Un registered Task " + task.getTaskId() + ". Currently available " + runningTasks.size());
+        logger.info("Un registered Task {}. Currently available {}", task.getTaskId(), runningTasks.size());
     }
 
     @SuppressWarnings("WeakerAccess")
@@ -116,54 +120,58 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
         for (Class<? extends T> taskClass : taskClasses) {
             TaskFactory taskFac = context -> {
                 try {
-                    return AbstractTask.class.cast(taskClass.newInstance())
+                    return taskClass.getDeclaredConstructor().newInstance()
                             .setParticipant(HelixParticipant.this)
                             .setCallbackContext(context)
                             .setTaskHelper(new TaskHelperImpl());
-                } catch (InstantiationException | IllegalAccessException e) {
-                    logger.error("Failed to initialize the task: " + context.getTaskConfig().getId(), e);
+                } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                         InvocationTargetException e) {
+                    logger.error("Failed to initialize the task: {}", context.getTaskConfig().getId(), e);
                     return null;
                 }
             };
             TaskDef taskDef = taskClass.getAnnotation(TaskDef.class);
-            taskRegistry.put(taskDef.name(), taskFac);
+            if (taskDef != null) {
+                taskRegistry.put(taskDef.name(), taskFac);
+            } else {
+                logger.warn("Task class {} is not annotated with @TaskDef", taskClass.getCanonicalName());
+            }
         }
         return taskRegistry;
     }
 
     public void run() {
-        ZkClient zkClient = null;
+       ZkClient zkClient = null;
         try {
             zkClient = new ZkClient(zkAddress, ZkClient.DEFAULT_SESSION_TIMEOUT,
                     ZkClient.DEFAULT_CONNECTION_TIMEOUT, new ZNRecordSerializer());
-            ZKHelixAdmin zkHelixAdmin = new ZKHelixAdmin(zkClient);
+            ZKHelixAdmin zkHelixAdmin = new ZKHelixAdmin.Builder().setZkAddress(zkAddress).build();
 
             List<String> nodesInCluster = zkHelixAdmin.getInstancesInCluster(clusterName);
 
             if (!nodesInCluster.contains(participantName)) {
                 InstanceConfig instanceConfig = new InstanceConfig(participantName);
                 instanceConfig.setHostName("localhost");
-                instanceConfig.setInstanceEnabled(true);
                 if (taskTypeName != null) {
                     instanceConfig.addTag(taskTypeName);
                 }
                 zkHelixAdmin.addInstance(clusterName, instanceConfig);
-                logger.info("Participant: " + participantName + " has been added to cluster: " + clusterName);
+                logger.info("Participant: {} has been added to cluster: {}", participantName, clusterName);
             } else {
                 if (taskTypeName != null) {
                     zkHelixAdmin.addInstanceTag(clusterName, participantName, taskTypeName);
                 }
-                zkHelixAdmin.enableInstance(clusterName, participantName, true);
-                logger.debug("Participant: " + participantName + " has been re-enabled at the cluster: " + clusterName);
+                zkHelixAdmin.enableResource(clusterName, participantName, true);
+                logger.debug("Participant: {} has been re-enabled at the cluster: {}", participantName, clusterName);
             }
 
             Runtime.getRuntime().addShutdownHook(
                     new Thread(() -> {
-                        logger.debug("Participant: " + participantName + " shutdown hook called");
+                        logger.debug("Participant: {} shutdown hook called", participantName);
                         try {
-                            zkHelixAdmin.enableInstance(clusterName, participantName, false);
+                            zkHelixAdmin.enableResource(clusterName, participantName, false);
                         } catch (Exception e) {
-                            logger.warn("Participant: " + participantName + " was not disabled normally", e);
+                            logger.warn("Participant: {} was not disabled normally", participantName, e);
                         }
                         disconnect();
                     })
@@ -172,7 +180,7 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
             // connect the participant manager
             connect();
         } catch (Exception ex) {
-            logger.error("Error in run() for Participant: " + participantName + ", reason: " + ex, ex);
+            logger.error("Error in run() for Participant: {}, reason: {}", participantName, ex, ex);
         } finally {
             if (zkClient != null) {
                 zkClient.close();
@@ -191,38 +199,39 @@ public class HelixParticipant<T extends AbstractTask> implements Runnable {
             // register task model
             machineEngine.registerStateModelFactory("Task", new TaskStateModelFactory(zkHelixManager, getTaskFactory()));
 
-            logger.debug("Participant: " + participantName + ", registered state model factories.");
+            logger.debug("Participant: {}, registered state model factories.", participantName);
 
             zkHelixManager.connect();
-            logger.info("Participant: " + participantName + ", has connected to cluster: " + clusterName);
+            logger.info("Participant: {}, has connected to cluster: {}", participantName, clusterName);
 
             Thread.currentThread().join();
         } catch (InterruptedException ex) {
-            logger.error("Participant: " + participantName + ", is interrupted! reason: " + ex, ex);
+            logger.error("Participant: {}, is interrupted! reason: {}", participantName, ex, ex);
         } catch (Exception ex) {
-            logger.error("Error in connect() for Participant: " + participantName + ", reason: " + ex, ex);
+            logger.error("Error in connect() for Participant: {}, reason: {}", participantName, ex, ex);
         } finally {
             disconnect();
         }
     }
 
     private void disconnect() {
-        logger.info("Shutting down participant. Currently available tasks " + runningTasks.size());
+        logger.info("Shutting down participant. Currently available tasks {}", runningTasks.size());
         if (zkHelixManager != null) {
-            if (runningTasks.size() > 0) {
+            if (!runningTasks.isEmpty()) {
                 for (int i = 0; i <= shutdownGraceRetries; i++) {
-                    logger.info("Shutting down gracefully [RETRY " + i + "]");
+                    logger.info("Shutting down gracefully [RETRY {}]", i);
                     try {
+                        //noinspection BusyWait
                         Thread.sleep(shutdownGracePeriod);
                     } catch (InterruptedException e) {
-                        logger.warn("Waiting for running tasks failed [RETRY " + i + "]", e);
+                        logger.warn("Waiting for running tasks failed [RETRY {}]", i, e);
                     }
-                    if (runningTasks.size() == 0) {
+                    if (runningTasks.isEmpty()) {
                         break;
                     }
                 }
             }
-            logger.info("Participant: " + participantName + ", has disconnected from cluster: " + clusterName);
+            logger.info("Participant: {}, has disconnected from cluster: {}", participantName, clusterName);
             zkHelixManager.disconnect();
         }
     }
